# calc

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: Calc.h  Frame.h  Matrix.h  ProblemReporter.h  Vector.h  Writer.h
include/ast/: AST.h  ASTNode.h  Assignment.h  BinaryExpression.h  CastExpression.h  ColonAtom.h  ColonExpression.h  Declaration.h  Expression.h  ExpressionList.h  ExpressionStatement.h  ExpressionValueOld.h  FloatLiteral.h  FunctionDeclaration.h  FunctionFrame.h  IntLiteral.h  MatrixExpression.h  MyExpressionValue.h  Reference.h  SizeExpression.h  Statement.h  Transpose.h  TypeReference.h  UnaryExpression.h
include/parser/: ErrorHandler.h  InputBuffer.h  Parser.h  StringBuffer.h  Token.h
include/symbol/: Function.h  FunctionFrame.h  GlobalScope.h  MiscFunctions.h  Scope.h  Symbol.h  SymbolMap.h  Type.h  Variable.h
include/util/: Allocator.h  Exception.h  LinkedList.h  ObjectPtrList.h  SharedObject.h
src/: Frame.cpp  Main.cpp  ProblemReporter.cpp  Writer.cpp  teste.cpp
src/ast/: Assignment.cpp  BinaryExpression.cpp  CastExpression.cpp  ColonAtom.cpp  ColonExpression.cpp  Expression.cpp  ExpressionStatement.cpp  FloatLiteral.cpp  FunctionDeclaration.cpp  IntLiteral.cpp  MatrixExpression.cpp  MyExpressionValue.cpp  Reference.cpp  SizeExpression.cpp  Transpose.cpp  UnaryExpression.cpp
src/parser/: ErrorHandler.cpp  Parser.cpp
src/symbol/: GlobalScope.cpp  MiscFunctions.cpp  Scope.cpp  Symbol.cpp
src/util/: Exception.cpp
